content/browser/accessibility/browser_accessibility_manager_auralinux.h
@@ -34,6 +34,8 @@ class CONTENT_EXPORT BrowserAccessibilityManagerAuraLinux
   void FireGeneratedEvent(AXEventGenerator::Event event_type,
                           BrowserAccessibility* node) override;
 
+  void FireSelectedEvent(BrowserAccessibility* node);
+
   AtkObject* parent_object() { return parent_object_; }
 
  protected:
